# libcoral

./: .gitignore  .gitmodules  compile_commands.json  default.nix  libcoral.nix  meson.build  meson_options.txt  shell.nix
coral/: meson.build
coral/classification/: meson.build
coral/detection/: meson.build  models_test.cc
coral/dmabuf/: meson.build
coral/examples/: meson.build  two_models_one_tpu.cc  two_models_two_tpus_threaded.cc
coral/learn/: imprinting_engine_test.cc  meson.build  utils_test.cc
coral/learn/backprop/: layers_test.cc  meson.build
coral/pipeline/: allocator_c_internal.h  common_c.cc  common_c.h  common_c_internal.h  meson.build  models_test_main.cc  pipelined_model_runner.cc  pipelined_model_runner.h  pipelined_model_runner_c.cc  pipelined_model_runner_c.h  pipelined_model_runner_c_internal.h
coral/pipeline/internal/: default_allocator_c.cc  default_allocator_c.h  meson.build
coral/posenet/: meson.build  models_test.cc  posenet_decoder_op.cc
coral/tools/: meson.build
coral/tools/partitioner/: meson.build  partitioner_test.cc  profiling_partition_util_test.cc  utils_test.cc
nix/: default.nix  eigen.nix  sources.json
