option(
  'benchmarks',
  type : 'feature',
  value : 'enabled',
  description : 'Build benchmarks',
)

option(
  'examples',
  type : 'feature',
  value : 'enabled',
  description : 'Build examples',
)

option(
  'tests',
  type : 'array',
  choices : [
    'cpu',
    'dmabuf',  # these tests can only be run on the coral dev board
    'edgetpu',
    'pipeline',
    'stress',  # these tests take a very long time to run
  ],
  value : [
    'cpu',
    'edgetpu',
    'pipeline',
  ],
  description : 'Build tests',
)
